--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
     <head>
         <link rel="stylesheet" href="styles.css" />
+        <meta
+            http-equiv="Cache-Control"
+            content="no-cache, no-store, must-revalidate"
+        />
+        <meta http-equiv="Pragma" content="no-cache" />
+        <meta http-equiv="Expires" content="0" />
     </head>
     <body>
         <div id="p1-container">
