--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <link rel="stylesheet" href="css/global.css" />
         <link rel="stylesheet" href="css/hero.css" />
+        <link rel="stylesheet" href="css/hero-mq.css" />
         <link rel="stylesheet" href="css/project.css" />
         <link rel="stylesheet" href="css/p2.css" />
         <link rel="stylesheet" href="css/square.css" />
