--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
     <head>
         <link rel="stylesheet" href="css/global.css" />
         <link rel="stylesheet" href="css/hero.css" />
-        <link rel="stylesheet" href="css/hero-mq.css" />
         <link rel="stylesheet" href="css/project.css" />
         <link rel="stylesheet" href="css/p2.css" />
         <link rel="stylesheet" href="css/square.css" />
+        <link rel="stylesheet" href="css/hero-mq.css" />
+
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1.0, user-scalable=no"
+        />
 
         <meta
             http-equiv="Cache-Control"
