--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
         </div>
         <div id="third-section">
             <span id="third-heading">Case Studies</span>
+            <div class="centered-image">
+                <img src="img/arrow.svg" alt="Arrow Icon" id="arrow-icon" />
+            </div>
         </div>
         <div id="p1-container">
             <div id="border"></div>
@@ -121,6 +124,6 @@
         </div>
         <div id="footer"></div>
 
-        <div id="scroll-indicator"></div>
+        <!-- <div id="scroll-indicator"></div> -->
     </body>
 </html>
