--- a/index.html
+++ b/index.html
@@ -27,11 +27,28 @@
     <body>
         <div id="hero-container">
             <div id="hero-content">
-                <div class="block">Victor Diukov</div>
-                <div class="block">
-                    <img src="img/main.png" alt="Victor Diukov" />
+                <div class="block" id="block-1">
+                    <h1>
+                        <span>Product Designer</span><br />
+                        Who Simplifies
+                        <span class="text-gradient">Tech</span> for Greater
+                        Impact
+                    </h1>
                 </div>
-                <div class="block">A designer who loves technology</div>
+                <div class="block" id="block-2">
+                    <img src="img/main2.png" alt="Victor Diukov" />
+                </div>
+                <div class="block" id="block-3">
+                    <a href="https://linkedin.com" target="_blank"
+                        >LinkedIn <img src="img/arrow-right.svg" alt="" /></a
+                    ><br />
+                    <a href="mailto:email@example.com" target="_blank"
+                        >Email <img src="img/arrow-right.svg" alt="" /></a
+                    ><br />
+                    <a href="resume.pdf" target="_blank"
+                        >Resume <img src="img/arrow-right.svg" alt=""
+                    /></a>
+                </div>
             </div>
         </div>
         <div id="second-section">
@@ -42,12 +59,14 @@
                         every aspect of our lives,</span
                     >
                     <span class="text-part" id="part-2">
-                        designers play a crucial role in making it accessible
-                        and intuitive,</span
+                        <span class="text-gradient">designers</span> play a
+                        crucial role in making it accessible and
+                        intuitive,</span
                     >
                     <span class="text-part" id="part-3">
                         ensuring users can live easier, more beautiful lives,
-                        and adapt seamlessly to the ever-changing digital
+                        and adapt seamlessly to the ever-changing
+                        <span class="text-gradient">digital</span>
                         landscape.</span
                     >
                 </p>
@@ -63,9 +82,9 @@
             <div id="border"></div>
             <div id="text-overlay">
                 <div id="tags">
-                    <span>FinTech</span>
-                    <span>User Research</span>
-                    <span>Conversation Design</span>
+                    <span class="anim-1">FinTech</span>
+                    <span class="anim-1">User Research</span>
+                    <span class="anim-2">Conversation Design</span>
                 </div>
                 <h1 id="headline1">
                     <span id="part1">Empowering Professionals</span>
@@ -77,7 +96,7 @@
                     user-driven solutions that redefine digital experiences in
                     the modern era.
                 </p>
-                <button id="cta-button">Open Project</button>
+                <button class="anim-2" id="cta-button">Open Project</button>
             </div>
             <div id="image-sequence-container">
                 <img
