--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <meta
             name="viewport"
-            content="width=device-width, initial-scale=1.0, user-scalable=no"
+            content="width=device-width, initial-scale=1.0, user-scalable=1 "
         />
 
         <meta
