--- a/index.html
+++ b/index.html
@@ -125,34 +125,46 @@
             <!-- Первый блок -->
             <div class="new-block">
                 <div class="image-content">
-                    <img src="img/p2-1.png" alt="FinTech Project Image" />
+                    <img
+                        src="img/p2-1.png"
+                        srcset="img/p2-1.png 1x, img/p2-1@2x.png 2x"
+                        alt="FinTech Project Image"
+                    />
                 </div>
                 <div class="text-content">
                     <p class="project-details">
-                        UX Research in AI / Conversation Design / FinTech
+                        FinTech / Accounting Analytics / Greenfield Development
                     </p>
                     <h2>
-                        Empowering FinTech Professionals with Advanced AI
-                        Capabilities
+                        Unified Reconciliation Platform for Accurate Financial
+                        Data Management
                     </h2>
-                    <a href="#" class="project-link">Open Project</a>
+                    <a href="#" class="project-link"
+                        >Open Project<img src="img/arrow-right.svg" alt=""
+                    /></a>
                 </div>
             </div>
 
             <!-- Второй блок -->
             <div class="new-block">
                 <div class="image-content">
-                    <img src="img/p2-2.png" alt="FinTech Project Image" />
+                    <img
+                        src="img/p2-2.png"
+                        srcset="img/p2-2.png 1x, img/p2-2@2x.png 2x"
+                        alt="FinTech Project Image"
+                    />
                 </div>
                 <div class="text-content">
                     <p class="project-details">
-                        UX Research in AI / Conversation Design / FinTech
+                        Mobile App / UX Research / Redesign
                     </p>
                     <h2>
-                        Empowering FinTech Professionals with Advanced AI
-                        Capabilities
+                        Enhancing Employee Communication Through Mobile
+                        Experience Redesign
                     </h2>
-                    <a href="#" class="project-link">Open Project</a>
+                    <a href="#" class="project-link"
+                        >Open Project<img src="img/arrow-right.svg" alt=""
+                    /></a>
                 </div>
             </div>
         </div>
