--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 </div>
             </div>
 
-            <!-- Второй блок -->
+            <!-- Projects 2 -->
             <div class="new-block">
                 <div class="image-content">
                     <img
