--- a/index.html
+++ b/index.html
@@ -121,8 +121,9 @@
             </div>
         </div>
 
+        <!-- Projects 2 -->
         <div id="p2-container">
-            <!-- Первый блок -->
+            <!-- block 1 -->
             <div class="new-block">
                 <div class="image-content">
                     <img
@@ -145,7 +146,7 @@
                 </div>
             </div>
 
-            <!-- Projects 2 -->
+            <!--block 2 -->
             <div class="new-block">
                 <div class="image-content">
                     <img
