--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
                 </p>
             </div>
         </div>
+
+        <!--p1 header  -->
+
         <div id="third-section">
             <span id="third-heading">Case Studies</span>
             <div class="centered-image">
@@ -91,6 +94,7 @@
             </div>
         </div>
 
+        <!--bp1 project  -->
         <div id="p1-container">
             <div id="p1-background"></div>
             <div id="p1-content">
@@ -146,7 +150,7 @@
                 </div>
             </div>
 
-            <!--block 2 -->
+            <!--block 2  -->
             <div class="new-block">
                 <div class="image-content">
                     <img
