--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         <script type="module" src="./main.js"></script>
     </head>
     <body>
+        <!-- First screen -->
         <div id="hero-section">
-            <!-- Контейнер с двумя блоками: левый и правый -->
             <div id="content-wrapper">
-                <!-- Левый блок с вложенной структурой (сверху и снизу) -->
+                <!-- left block -->
                 <div class="content-block" id="left-block">
                     <!-- Верхний текст -->
                     <div class="content-top">
@@ -56,7 +56,7 @@
                     </div>
                 </div>
 
-                <!-- Правый блок с изображением -->
+                <!-- Right block  with image -->
                 <div class="content-block" id="right-block">
                     <img src="img/main2.png" alt="Victor Diukov" />
                 </div>
