--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
     <head>
+        <link rel="stylesheet" href="css/reset-square.css" />
         <link rel="stylesheet" href="css/global.css" />
         <link rel="stylesheet" href="css/hero.css" />
         <link rel="stylesheet" href="css/hero-mq.css" />
@@ -8,8 +9,6 @@
         <link rel="stylesheet" href="css/p1-mq.css" />
         <link rel="stylesheet" href="css/p2.css" />
         <link rel="stylesheet" href="css/p2-mq.css" />
-        <link rel="stylesheet" href="css/square.css" />
-
         <meta
             name="viewport"
             content="width=device-width, initial-scale=1.0, user-scalable=1"
