sqr reset fixes 2

--- a/index.html
+++ b/index.html
@@ -27,153 +27,159 @@
     </head>
     <body>
         <!-- First screen -->
-        <div id="hero-section">
-            <div id="content-wrapper">
-                <!-- left block -->
-                <div class="content-block" id="left-block">
-                    <!-- Верхний текст -->
-                    <div class="content-top">
-                        <h1>
-                            <span>Product Designer</span><br />
-                            Who Simplifies
-                            <span class="text-gradient">Tech</span> for Greater
-                            Impact
-                        </h1>
+        <div id="all-content">
+            <div id="hero-section">
+                <div id="content-wrapper">
+                    <!-- left block -->
+                    <div class="content-block" id="left-block">
+                        <!-- Верхний текст -->
+                        <div class="content-top">
+                            <h1>
+                                <span>Product Designer</span><br />
+                                Who Simplifies
+                                <span class="text-gradient">Tech</span> for
+                                Greater Impact
+                            </h1>
+                        </div>
+                        <!-- Ссылки внизу -->
+                        <div class="content-bottom" id="links-block">
+                            <a href="https://linkedin.com" target="_blank"
+                                >LinkedIn
+                                <img src="img/arrow-right.svg" alt="" /></a
+                            ><br />
+                            <a href="mailto:email@example.com" target="_blank"
+                                >Email
+                                <img src="img/arrow-right.svg" alt="" /></a
+                            ><br />
+                            <a href="resume.pdf" target="_blank"
+                                >Resume <img src="img/arrow-right.svg" alt=""
+                            /></a>
+                        </div>
                     </div>
-                    <!-- Ссылки внизу -->
-                    <div class="content-bottom" id="links-block">
-                        <a href="https://linkedin.com" target="_blank"
-                            >LinkedIn
-                            <img src="img/arrow-right.svg" alt="" /></a
-                        ><br />
-                        <a href="mailto:email@example.com" target="_blank"
-                            >Email <img src="img/arrow-right.svg" alt="" /></a
-                        ><br />
-                        <a href="resume.pdf" target="_blank"
-                            >Resume <img src="img/arrow-right.svg" alt=""
+
+                    <!-- Right block  with image -->
+                    <div class="content-block" id="right-block">
+                        <img src="img/main2.png" alt="Victor Diukov" />
+                    </div>
+                </div>
+            </div>
+
+            <div id="second-section">
+                <div id="second-content">
+                    <p>
+                        <span class="text-part" id="part-1">
+                            As technology rapidly evolves, it continuously
+                            shapes every aspect of our lives,</span
+                        >
+                        <span class="text-part" id="part-2">
+                            <span class="text-gradient">designers</span> play a
+                            crucial role in making it accessible and
+                            intuitive,</span
+                        >
+                        <span class="text-part" id="part-3">
+                            ensuring users can live easier, more beautiful
+                            lives, and adapt seamlessly to the ever-changing
+                            <span class="text-gradient">digital</span>
+                            landscape.</span
+                        >
+                    </p>
+                </div>
+            </div>
+
+            <!--p1 header  -->
+
+            <div id="third-section">
+                <span id="third-heading">Case Studies</span>
+                <div class="centered-image">
+                    <img src="img/arrow.svg" alt="Arrow Icon" id="arrow-icon" />
+                </div>
+            </div>
+
+            <!--bp1 project  -->
+            <div id="p1-container">
+                <div id="p1-background"></div>
+                <div id="p1-content">
+                    <div class="text-block" id="tags">
+                        UX Research in AI / Conversation Design / FinTech
+                    </div>
+                    <h1 class="text-block" id="headline1">
+                        <span id="part1"
+                            >Empowering FinTech <br />Professionals</span
+                        >
+                        <span id="part2"
+                            >with Advanced <br />AI Capabilities</span
+                        >
+                    </h1>
+                    <button class="text-block" id="cta-button">
+                        Open Project
+                        <img
+                            id="arrow-icon"
+                            src="img/arrow-right.svg"
+                            alt="Arrow Icon"
+                        />
+                    </button>
+                </div>
+                <div id="image-sequence-container">
+                    <img
+                        id="image-sequence"
+                        src="frames_1/p1148.webp"
+                        alt="Animation Frame"
+                    />
+                </div>
+            </div>
+
+            <!-- Projects 2 -->
+            <div id="p2-container">
+                <!-- block 1 -->
+                <div class="new-block">
+                    <div class="image-content">
+                        <img
+                            src="img/p2-1.png"
+                            srcset="img/p2-1.png 1x, img/p2-1@2x.png 2x"
+                            alt="FinTech Project Image"
+                        />
+                    </div>
+                    <div class="text-content">
+                        <p class="project-details">
+                            FinTech / Accounting Analytics / Greenfield
+                            Development
+                        </p>
+                        <h2>
+                            Unified Reconciliation Platform for Accurate
+                            Financial Data Management
+                        </h2>
+                        <a href="#" class="project-link"
+                            >Open Project<img src="img/arrow-right.svg" alt=""
                         /></a>
                     </div>
                 </div>
 
-                <!-- Right block  with image -->
-                <div class="content-block" id="right-block">
-                    <img src="img/main2.png" alt="Victor Diukov" />
+                <!--block 2  -->
+                <div class="new-block">
+                    <div class="image-content">
+                        <img
+                            src="img/p2-2.png"
+                            srcset="img/p2-2.png 1x, img/p2-2@2x.png 2x"
+                            alt="FinTech Project Image"
+                        />
+                    </div>
+                    <div class="text-content">
+                        <p class="project-details">
+                            Mobile App / UX Research / Redesign
+                        </p>
+                        <h2>
+                            Enhancing Employee Communication Through Mobile
+                            Experience Redesign
+                        </h2>
+                        <a href="#" class="project-link"
+                            >Open Project<img src="img/arrow-right.svg" alt=""
+                        /></a>
+                    </div>
                 </div>
             </div>
+
+            <div id="footer"></div>
         </div>
-
-        <div id="second-section">
-            <div id="second-content">
-                <p>
-                    <span class="text-part" id="part-1">
-                        As technology rapidly evolves, it continuously shapes
-                        every aspect of our lives,</span
-                    >
-                    <span class="text-part" id="part-2">
-                        <span class="text-gradient">designers</span> play a
-                        crucial role in making it accessible and
-                        intuitive,</span
-                    >
-                    <span class="text-part" id="part-3">
-                        ensuring users can live easier, more beautiful lives,
-                        and adapt seamlessly to the ever-changing
-                        <span class="text-gradient">digital</span>
-                        landscape.</span
-                    >
-                </p>
-            </div>
-        </div>
-
-        <!--p1 header  -->
-
-        <div id="third-section">
-            <span id="third-heading">Case Studies</span>
-            <div class="centered-image">
-                <img src="img/arrow.svg" alt="Arrow Icon" id="arrow-icon" />
-            </div>
-        </div>
-
-        <!--bp1 project  -->
-        <div id="p1-container">
-            <div id="p1-background"></div>
-            <div id="p1-content">
-                <div class="text-block" id="tags">
-                    UX Research in AI / Conversation Design / FinTech
-                </div>
-                <h1 class="text-block" id="headline1">
-                    <span id="part1"
-                        >Empowering FinTech <br />Professionals</span
-                    >
-                    <span id="part2">with Advanced <br />AI Capabilities</span>
-                </h1>
-                <button class="text-block" id="cta-button">
-                    Open Project
-                    <img
-                        id="arrow-icon"
-                        src="img/arrow-right.svg"
-                        alt="Arrow Icon"
-                    />
-                </button>
-            </div>
-            <div id="image-sequence-container">
-                <img
-                    id="image-sequence"
-                    src="frames_1/p1148.webp"
-                    alt="Animation Frame"
-                />
-            </div>
-        </div>
-
-        <!-- Projects 2 -->
-        <div id="p2-container">
-            <!-- block 1 -->
-            <div class="new-block">
-                <div class="image-content">
-                    <img
-                        src="img/p2-1.png"
-                        srcset="img/p2-1.png 1x, img/p2-1@2x.png 2x"
-                        alt="FinTech Project Image"
-                    />
-                </div>
-                <div class="text-content">
-                    <p class="project-details">
-                        FinTech / Accounting Analytics / Greenfield Development
-                    </p>
-                    <h2>
-                        Unified Reconciliation Platform for Accurate Financial
-                        Data Management
-                    </h2>
-                    <a href="#" class="project-link"
-                        >Open Project<img src="img/arrow-right.svg" alt=""
-                    /></a>
-                </div>
-            </div>
-
-            <!--block 2  -->
-            <div class="new-block">
-                <div class="image-content">
-                    <img
-                        src="img/p2-2.png"
-                        srcset="img/p2-2.png 1x, img/p2-2@2x.png 2x"
-                        alt="FinTech Project Image"
-                    />
-                </div>
-                <div class="text-content">
-                    <p class="project-details">
-                        Mobile App / UX Research / Redesign
-                    </p>
-                    <h2>
-                        Enhancing Employee Communication Through Mobile
-                        Experience Redesign
-                    </h2>
-                    <a href="#" class="project-link"
-                        >Open Project<img src="img/arrow-right.svg" alt=""
-                    /></a>
-                </div>
-            </div>
-        </div>
-
-        <div id="footer"></div>
 
         <!-- <div id="scroll-indicator"></div> -->
     </body>
