--- a/index.html
+++ b/index.html
@@ -43,15 +43,19 @@
                         </div>
                         <!-- Ссылки внизу -->
                         <div class="content-bottom" id="links-block">
-                            <a href="https://linkedin.com" target="_blank"
+                            <a
+                                href="http://linkedin.com/in/victorduco/"
+                                target="_blank"
                                 >LinkedIn
                                 <img src="img/arrow-right.svg" alt="" /></a
                             ><br />
-                            <a href="mailto:email@example.com" target="_blank"
+                            <a href="mailto:mail@victorduco.com" target="_blank"
                                 >Email
                                 <img src="img/arrow-right.svg" alt="" /></a
                             ><br />
-                            <a href="resume.pdf" target="_blank"
+                            <a
+                                href="https://www.victorduco.com/s/victor_diukov_resume-9akl.pdf"
+                                target="_blank"
                                 >Resume <img src="img/arrow-right.svg" alt=""
                             /></a>
                         </div>
@@ -110,14 +114,14 @@
                             >with Advanced <br />AI Capabilities</span
                         >
                     </h1>
-                    <button class="text-block" id="cta-button">
+                    <a
+                        href="/reconciliaion-genai"
+                        class="text-block"
+                        id="cta-button"
+                    >
                         Open Project
-                        <img
-                            id="arrow-icon"
-                            src="img/arrow-right.svg"
-                            alt="Arrow Icon"
-                        />
-                    </button>
+                        <img src="img/arrow-right.svg" alt="Arrow Icon" />
+                    </a>
                 </div>
                 <div id="image-sequence-container">
                     <img
@@ -141,14 +145,14 @@
                     </div>
                     <div class="text-content">
                         <p class="project-details">
-                            FinTech / Accounting Analytics / Greenfield
-                            Development
+                            Accounting Analytics / Greenfield Development /
+                            FinTech
                         </p>
                         <h2>
                             Unified Reconciliation Platform for Accurate
                             Financial Data Management
                         </h2>
-                        <a href="#" class="project-link"
+                        <a href="/reconciliaion-dashboard" class="project-link"
                             >Open Project<img src="img/arrow-right.svg" alt=""
                         /></a>
                     </div>
@@ -165,13 +169,13 @@
                     </div>
                     <div class="text-content">
                         <p class="project-details">
-                            Mobile App / UX Research / Redesign
+                            Mobile / UX Research / Redesign
                         </p>
                         <h2>
                             Enhancing Employee Communication Through Mobile
                             Experience Redesign
                         </h2>
-                        <a href="#" class="project-link"
+                        <a href="/smarp" class="project-link"
                             >Open Project<img src="img/arrow-right.svg" alt=""
                         /></a>
                     </div>
